WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288357
Fix flaky crash in ResourceMonitor.
https://bugs.webkit.org/show_bug.cgi?id=288357
Summary
Fix flaky crash in ResourceMonitor.
Basuke Suzuki
Reported
2025-02-23 23:30:07 PST
In ResourceMonitor.cpp, a macro to produce RELEASE_LOG is defined and m_frame weak ptr is used without checking. Add check before calling that macro.
Attachments
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2025-02-23 23:30:24 PST
rdar://145427232
Basuke Suzuki
Comment 2
2025-02-23 23:33:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41189
EWS
Comment 3
2025-02-24 09:01:51 PST
Committed
290954@main
(734c49b3d075): <
https://commits.webkit.org/290954@main
> Reviewed commits have been landed. Closing PR #41189 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug