Fix flaky crash in ResourceMonitor. https://bugs.webkit.org/show_bug.cgi?id=288357 rdar://145427232

Reviewed by Chris Dumez.

In ResourceMonitor.cpp, a macro to produce RELEASE_LOG is defined and m_frame weak ptr is used without checking.

Add check before calling that macro.

* Source/WebCore/loader/ResourceMonitor.cpp:
(WebCore::ResourceMonitor::setEligibility):
(WebCore::ResourceMonitor::addNetworkUsage):
(WebCore::ResourceMonitor::updateNetworkUsageThreshold):
* Source/WebCore/loader/ResourceMonitorChecker.cpp:
(WebCore::ResourceMonitorChecker::setNetworkUsageThreshold):

Canonical link: https://commits.webkit.org/290954@main